website/translated_docs/ru/version-1.0.4/3-smart-contract/Contract-Testing.md
---
id: version-1.0.4-Contract-Testing
title: Тестирование
sidebar_label: Тестирование
original_id: Contract-Testing
---

IOST предоставил разработчикам автономное зеркало докера генерирующее блоки, чтобы было удобно тестировать смарт-контракты. Это может помочь разработчикам обеспечить правильность смарт-контрактов, прежде чем помещать их в основную цепочку, позволяя им использовать автономный докер в качестве бэкэнда запросов RPC (Remote Procedure Call - протокол удалённого вызова процедур).

Стоит отметить, что контракты напрямую не привязаны к блокчейну при загрузке в принимающую сторону RPC. Контракт должен будет дождаться, когда будет создан следующий блок. Проверка валидности также будет выполняться, когда контракт будет упакован в блок.

## Запуск зеркала докера

```bash
docker run -d -p 30002:30002 -p 30001:30001 iostio/iost-node:1.0.0
```

С помощью этой команды мы сопоставляем порт 30002 докера с портом 30002 машины, позволяя отправлять запросы RPC непосредственно в докер. Затем он упаковывается нашей блокчейн программой и включается в цепочку.

### Примечание

1. Докер использует порт 30002 локально, тогда как iWallet использует 30302. При использовании iWallet нам нужно добавить `-s localhost::30002` перед запуском других команд.

2. В этом зеркале все IOST помещаются в начальный аккаунт с 21 000 000 000 IOST. Когда нам нужно инициировать транзакцию или развернуть контракт, вам необходимо перевести средства с этого аккаунта. Поскольку на любую транзакцию IOST затрачивается газ, и все токены хранятся в первоначальном аккаунте, только этот аккаунт может провести транзакцию.

- Начальный Аккаунт: `IOSTfQFocqDn7VrKV7vvPqhAQGyeFU9XMYo5SNn5yQbdbzC75wM7C`
- Начальный Секретный ключ: `1rANSfcRzr4HkhbUFZ7L1Zp69JZZHiDDq5v7dNSbbEqeU4jxy3fszV4HGiaLQEyqVpS1dKT9g7zCVRxBVzuiUzB`

## Как перевести IOST на другой аккаунт

### Сгенерировать аккаунт

```bash
// This will generate a private/public key pair under ~/.iwallet/ folder
./iwallet account
```

### Инициировать транзакцию

```bash
// Normally we ask the fromID to sign the transaction
./iwallet call "iost.system" "Transfer" '["fromID", "toID", 100]' --signer "ID0, ID1"
// Example
./iwallet call iost.system Transfer '["IOSTfQFocqDn7VrKV7vvPqhAQGyeFU9XMYo5SNn5yQbdbzC75wM7C", "IOSTfQFocqDn7VrKV7vvPqhAQGyeFU9XMYo5SNn5yQbdbzC75wM7C", 100]' --signers "IOSTfQFocqDn7VrKV7vvPqhAQGyeFU9XMYo5SNn5yQbdbzC75wM7C"
```

Это создаст файл транзакции `iost.sc`. Мы должны следовать рабочему процессу развертывания, чтобы развернуть этот контракт в блокчейне, как указано в *Развертывание и вызов*.

## Развертывание контракта локально (на локальной цепочке)

Пожалуйста, обратитесь к *Развертывание и вызов*.

## Проверьте, есть ли контракт в блокчейне

Когда мы создаем транзакцию или контракт, мы инициируем `Transaction`. `iWallet` вернет хеш к этой `Transaction` (транзакции), и этот хеш будет ID этой транзакции. Мы можем проверить, успешно ли проведена транзакция.

```bash
./iwallet transaction $TxID
```

Если транзакция не была проведена, мы можем экспортировать логи из докера и проверить детальную информацию об ошибках.

```bash
docker logs $ContainerID
```
