website/translated_docs/ru/version-2.0.3/3-smart-contract/Contract-Testing.md
---
id: version-2.0.3-Contract-Testing
title: Тестирование
sidebar_label: Тестирование
original_id: Contract-Testing
---

IOST предоставил разработчикам автономное зеркало докера генерирующее блоки, чтобы было удобно тестировать смарт-контракты. Это может помочь разработчикам обеспечить правильность смарт-контрактов, прежде чем помещать их в основную цепочку, позволяя им использовать автономный докер в качестве бэкэнда запросов RPC (Remote Procedure Call - протокол удалённого вызова процедур).

Стоит отметить, что контракты напрямую не привязаны к блокчейну при загрузке в принимающую сторону RPC. Контракт должен будет дождаться, когда будет создан следующий блок. Проверка валидности также будет выполняться, когда контракт будет упакован в блок.

## Запуск зеркала докера

```bash
docker run -d -p 30002:30002 -p 30001:30001 iostio/iost-node:1.0.0
```

С помощью этой команды мы сопоставляем порт 30002 докера с портом 30002 машины, позволяя отправлять запросы RPC непосредственно в докер. Затем он упаковывается нашей блокчейн программой и включается в цепочку.

### Примечание

В этом зеркале все IOST помещаются в начальный аккаунт с 21 000 000 000 IOST. Когда нам нужно инициировать транзакцию или развернуть контракт, вам необходимо перевести средства с этого аккаунта. Поскольку на любую транзакцию IOST затрачивается газ, и все токены хранятся в первоначальном аккаунте, только этот аккаунт может провести транзакцию.

## Как перевести IOST на другой аккаунт

### Сгенерировать аккаунт

```bash
// This will generate a private/public key pair under ~/.iwallet/ folder
./iwallet account
// Import Admin
./iwallet account --import admin 2yquS3ySrGWPEKywCPzX4RTJugqRh7kJSo5aehsLYPEWkUxBWA39oMrZ7ZxuM4fgyXYs2cPwh5n8aNNpH5x2VyK1
```

### Инициировать транзакцию

```bash
// Normally we ask the fromID to sign the transaction
./iwallet -s localhost:30002 --account admin  account --create yourAccountName --initial_balance 1000 --initial_gas_pledge 10 --initial_ram 0
// Example
./iwallet -s localhost:30002 --account admin  account --create lispczz3 --initial_balance 1000 --initial_gas_pledge 10 --initial_ram 0
```

## Развертывание контракта локально (на локальной цепочке)

Пожалуйста, обратитесь к *Развертывание и вызов*.

## Проверьте, есть ли контракт в блокчейне

Когда мы создаем транзакцию или контракт, мы инициируем `Transaction`. `iWallet` вернет хеш к этой `Transaction` (транзакции), и этот хеш будет ID этой транзакции. Мы можем проверить, успешно ли проведена транзакция.

```bash
./iwallet transaction $TxID
```

Если транзакция не была проведена, мы можем экспортировать логи из докера и проверить детальную информацию об ошибках.

```bash
docker logs $ContainerID
```
